# ducky-calc

./: Cargo.toml  README.md
ducky-exec/: Cargo.toml
ducky-exec/src/: ast.rs  coms_proto.rs  lib.rs
payloads/: s2.tar  s4.tar
payloads/s2/: meta-data.txt
payloads/s4/: meta-data.txt  payload.txt
src/: key_codes.txt  main.rs
