[package]
name = "ducky-calc"
version = "0.1.0"
edition = "2024"

[features]
default = []
deploy = []

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
ducky-exec = { version = "0.1.0", path = "ducky-exec" }
embedded-hal = { version = "1.0.0" }
embedded-graphics = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "log"], git = "https://github.com/embassy-rs/embassy" }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-rp = { version = "0.9.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info", "log"], git = "https://github.com/embassy-rs/embassy" }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1"
log = "0.4.29"
embassy-futures = { version = "0.1.2", features = ["log"], git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.7.2", features = ["log"], git = "https://github.com/embassy-rs/embassy" }
embedded-alloc = "0.7.0"
static_cell = "2.1.1"
embedded-sdmmc = "0.7.0"
usbd-hid = { version = "0.9.0", default-features = false, features = ["defmt"] }
lcd-async = { git = "https://github.com/okhsunrog/lcd-async", version = "0.1.1" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", version = "0.5.1" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", version = "0.5.1", features = ["log"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = ["log"] }
embedded-hal-bus = { version = "0.3.0", features = ["async", "alloc"] }
tar-no-std = { version = "0.4.2", features = ["alloc"] }
# defmt-serial = "0.11.0"
# rp235x-hal = { version = "0.4.0", features = [] }
# embassy-embedded-hal = "0.5.0"
# embassy-usb = { version = "0.5.1", features = ["log"] }

# embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0" }


# ili9486-driver = { git = "http://github.com/calacuda/picocalc-bevy-test", version = "0.1.0" }
# serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
# serde_core = { version = "1.0.228", default-features = false, features = ["alloc", "result"] }
# ili9486-driver = {git = "https://github.com/chrismoos/ili9486-driver", branch = "master"}

# [dependencies.embedded-gfx]
# git = "https://github.com/calacuda/embedded-gfx"

# [dependencies.display-interface-spi]
# git = "https://github.com/chrismoos/display-interface"
# branch = "rw-interface"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
# debug = 2
debug-assertions = false # <-
incremental = false
# lto = 'fat'
lto = true
opt-level = 3 # <-
overflow-checks = false
strip = "debuginfo"
