[package]
name = "ducky-exec"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
async-recursion = "1.1.1"
embassy-sync = { version = "0.7.2", features = ["log"], git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = ["log"] }
# keycode = "1.0.0"
log = "0.4.22"
pest = { version = "2.8.6", default-features = false }
pest_derive = { version = "2.7.12", default-features = false }
# usbd-hid = "0.8.2"
# usbd-hid = { version = "0.9.0", default-features = false, features = ["defmt"] }
